--- a/roles/certbot/tasks/main.yml
+++ b/roles/certbot/tasks/main.yml
@@ -1,72 +1,11 @@
 ---
 
-- name: Install prerequisites
-  apt:
-    name:
-      - python3.9
-      - python3.9-venv
-      - libaugeas0
-    update_cache: true
-    state: present
-  when: ansible_os_family == 'Debian'
-  tags: ["install"]
-
-- name: Install prerequisites
-  dnf:
-    name:
-      - python39
-      - augeas-libs
-    state: present
-  when: ansible_os_family == 'RedHat'
-  tags: ["install"]
-
-- name: Install prerequisites
-  community.general.pkgng:
-    name:
-      - python39
-      - gcc   # Required to compile cryptography
-      - rust  # Required to compile cryptography
-      - augeas
-    state: present
-  when: ansible_os_family == 'FreeBSD'
-  tags: ["install"]
-
 - name: Include platform specific vars
   include_vars: "{{ ansible_system }}.yml"
-  tags: ["install"]
 
-- name: Setup venv  # noqa package-latest
-  pip:
-    name:
-      - pip
-      - setuptools
-      - wheel
-    umask: "0077"
-    state: latest
-    virtualenv: "{{ certbot_venv_path }}"
-    virtualenv_command: "{{ __python_bin_path }} -m venv"
-  tags: ["install"]
-
-- name: Install certbot
-  pip:
-    name: "{{ certbot_pkgs + certbot_extra_pkgs }}"
-    umask: "0077"
-    virtualenv: "{{ certbot_venv_path }}"
-  tags: ["install"]
-
-- name: Ensure bin link exists
-  file:
-    src: "{{ certbot_venv_path }}/bin/certbot"
-    dest: "{{ __certbot_bin_path }}"
-    state: link
-  tags: ["install"]
-
-- name: Configure services if possible
-  include_tasks: "{{ item }}"
-  with_first_found:
-    - files: ["{{ ansible_system }}.yml"]
-      skip: true
-  when: certbot_auto_renew | bool
+- name: Include install tasks
+  include_tasks: install.yml
+  when: certbot_install | bool
   tags: ["install"]
 
 - name: Ensure /etc/letsencrypt exists
