--- a/host_vars/romsto/vars.yml
+++ b/host_vars/romsto/vars.yml
@@ -8,3 +8,4 @@ scrape_user: "{{ vault_scrape_user }}"
 ssh_port: "{{ vault_ssh_port }}"
 syncthing_port: "{{ vault_syncthing_port }}"
 cadvisor_port: "9101"
+nextcloud_port: "25683"
