--- a/roles/nginx_exporter/defaults/main.yml
+++ b/roles/nginx_exporter/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-nginx_exporter_version: 0.10.0
+nginx_exporter_version: "0.10.0"
 
 nginx_exporter_no_sysusers: false
 nginx_exporter_skip_install: false
