--- a/roles/nginx_exporter/tasks/install.yml
+++ b/roles/nginx_exporter/tasks/install.yml
@@ -63,7 +63,7 @@
       retries: 5
       check_mode: false
 
-    - name: "Set node-exporter version to {{ _latest_release.json.tag_name[1:] }}"
+    - name: "Set nginx-exporter version to {{ _latest_release.json.tag_name[1:] }}"
       set_fact:
         nginx_exporter_version: "{{ _latest_release.json.tag_name[1:] }}"
   when:
@@ -81,7 +81,7 @@
   get_url:
     url: "https://github.com/nginxinc/nginx-prometheus-exporter/releases/download/v{{ nginx_exporter_version }}/nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_{{ go_arch }}.tar.gz"
     dest: "/tmp/nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_{{ go_arch }}.tar.gz"
-    checksum: "sha256:{{ (__nginx_exporter_checksums | select('search', 'linux-' + go_arch + '.tar.gz') | first).split()[0] }}"
+    checksum: "sha256:{{ (__nginx_exporter_checksums | select('search', 'linux_' + go_arch + '.tar.gz') | first).split()[0] }}"
   register: _download_archive
   until: _download_archive is succeeded
   retries: 5
