--- a/host_vars/webgw01/wireguard.yml
+++ b/host_vars/webgw01/wireguard.yml
@@ -13,6 +13,7 @@ wireguard_dns_list:
 
 wireguard_mt_allowed_ips:
   - "{{ hostvars['mt-router'].wireguard_ip }}/32"
+  - "{{ hostvars['romsto'].wireguard_ip }}/32"
   - "{{ home_net.vm.cidr }}"
   - "{{ hostvars['dresrv'].ansible_host }}/32"
   - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
