--- a/host_vars/romsto/wireguard.yml
+++ b/host_vars/romsto/wireguard.yml
@@ -16,12 +16,17 @@ wireguard_mt_allowed_ips:
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ipaddr('address') }}"
 wireguard_private_key: "{{ vault_wireguard_private_key }}"
+wireguard_public_key: "{{ vault_wireguard_public_key }}"
 
 wireguard_unmanaged_peers:
   mt:
     endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_mt_allowed_ips | join(', ') }}"
     public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
+  webgw:
+    endpoint: "{{ hostvars['webgw01'].wireguard_endpoint }}"
+    allowed_ips: "{{ hostvars['webgw01'].wireguard_ip }}/32"
+    public_key: "{{ hostvars['webgw01'].wireguard_public_key }}"
 
 wireguard_endpoint: ""
 wireguard_persistent_keepalive: "30"
