--- a/host_vars/webgw01/wireguard.yml
+++ b/host_vars/webgw01/wireguard.yml
@@ -13,7 +13,6 @@ wireguard_dns_list:
 
 wireguard_mt_allowed_ips:
   - "{{ hostvars['mt-router'].wireguard_ip }}/32"
-  - "{{ hostvars['romsto'].wireguard_ip }}/32"
   - "{{ home_net.vm.cidr }}"
   - "{{ hostvars['dresrv'].ansible_host }}/32"
   - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
@@ -33,5 +32,10 @@ wireguard_unmanaged_peers:
     allowed_ips: "{{ wireguard_mt_allowed_ips | join(', ') }}"
     public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
   romgw:
+    endpoint: "{{ hostvars['romsto'].ddns_domain }}:{{ hostvars['romgw01'].wireguard_port }}"
     allowed_ips: "{{ hostvars['romgw01'].wireguard_ip }}/32"
     public_key: "{{ hostvars['romgw01'].wireguard_public_key }}"
+  romsto:
+    endpoint: "{{ hostvars['romsto'].ddns_domain }}:{{ hostvars['romsto'].wireguard_port }}"
+    allowed_ips: "{{ hostvars['romsto'].wireguard_ip }}/32"
+    public_key: "{{ hostvars['romsto'].wireguard_public_key }}"
