--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -10,6 +10,23 @@
     state: present
   tags: ["install"]
 
+- name: Check if sshd_config.d exists
+  become: true
+  stat:
+    path: "/etc/ssh/sshd_config.d"
+  register: __ssh_conf_d
+
+- name: Configure using sshd_config.d
+  become: true
+  copy:
+    content: "{{ sshd_config | map(attribute='line') | join('\n') }}\n"
+    dest: /etc/ssh/sshd_config.d/00-ansible.conf
+    owner: root
+    group: root
+    mode: 0600
+  notify: reload sshd
+  when: __ssh_conf_d.stat.exists
+
 - name: Set up sshd_config
   become: true
   lineinfile:
@@ -18,6 +35,7 @@
     line: "{{ item.line }}"
     state: present
   with_items: "{{ sshd_config }} "
+  when: not __ssh_conf_d.stat.exists
   notify: reload sshd
 
 - name: Set up extra sshd config
