--- a/roles/promtail/tasks/install.yml
+++ b/roles/promtail/tasks/install.yml
@@ -87,4 +87,6 @@
     owner: root
     group: root
     mode: 0644
-  notify: restart promtail
+  notify:
+    - reload systemd
+    - restart promtail
