--- a/playbooks/promtail.yml
+++ b/playbooks/promtail.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Prepare target hosts group
-  hosts: servers, !truenas, !romsto
+  hosts: servers, !truenas
   gather_facts: true
   roles:
     - role: promtail
