--- a/host_vars/webgw01/vars.yml
+++ b/host_vars/webgw01/vars.yml
@@ -3,3 +3,5 @@
 ansible_host: "{{ vault_ansible_host }}"
 ansible_host6: "{{ vault_ansible_host6 }}"
 ansible_user: "{{ vault_ansible_user }}"
+
+sys_timezone: "Etc/UTC"
