Use ansible.utils.ipaddr

--- a/group_vars/gitlab/vars.yml
+++ b/group_vars/gitlab/vars.yml
@@ -4,7 +4,7 @@ ansible_user: root
 ansible_python_interpreter: /usr/bin/python3
 
 # 40h == 64d
-ansible_host6: "{{ home_net.vm.cidr6 | ipaddr('64') | ipaddr('address') }}"
+ansible_host6: "{{ home_net.vm.cidr6 | ansible.utils.ipaddr('64') | ansible.utils.ipaddr('address') }}"
 
 provisioned_disks:
   - dev: "/dev/sdb"
