--- a/host_vars/truenas/vars.yml
+++ b/host_vars/truenas/vars.yml
@@ -6,9 +6,9 @@ ansible_truenas_api_token: "{{ vault_truenas_api_key }}"
 ansible_truenas_validate_certs: false
 
 local_ips:
-  vm: "{{ home_net.vm.cidr | ipaddr('2') | ipaddr('address') }}"
-  general: "{{ home_net.general.cidr | ipaddr('2') | ipaddr('address') }}"
-  mgmt: "{{ home_net.mgmt.cidr | ipaddr('2') | ipaddr('address') }}"
+  vm: "{{ home_net.vm.cidr | ansible.utils.ipaddr('2') | ansible.utils.ipaddr('address') }}"
+  general: "{{ home_net.general.cidr | ansible.utils.ipaddr('2') | ansible.utils.ipaddr('address') }}"
+  mgmt: "{{ home_net.mgmt.cidr | ansible.utils.ipaddr('2') | ansible.utils.ipaddr('address') }}"
 
 s3_admin_access_key: "{{ vault_s3_admin_access_key }}"
 s3_admin_secret_key: "{{ vault_s3_admin_secret_key }}"
