--- a/host_vars/laptop/wireguard.yml
+++ b/host_vars/laptop/wireguard.yml
@@ -18,8 +18,8 @@ wireguard_mt_allowed_ips:
   - "{{ home_net | dict2items | json_query('[].value.cidr6') }}"
 
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
-wireguard_ip: "{{ wireguard_addresses[0] | ipaddr('address') }}"
-wireguard_ipv6: "{{ wireguard_addresses[1] | ipaddr('address') }}"
+wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
+wireguard_ipv6: "{{ wireguard_addresses[1] | ansible.utils.ipaddr('address') }}"
 wireguard_dns: "{{ wireguard_dns_list | join(', ') }}"
 wireguard_private_key: "{{ vault_wireguard_private_key }}"
 
