--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,7 @@
 ---
 collections:
   - name: ansible.posix
+  - name: ansible.utils
   - name: community.general
 
   - name: git@github.com:cosandr/ansible-collection-spatiumcepa-truenas.git
