--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/geerlingguy/ansible-role-nginx.git
 [submodule "roles/unattended-upgrades"]
 	path = roles/unattended-upgrades
-	url = https://github.com/jnv/ansible-role-unattended-upgrades
+	url = git@github.com:cosandr/ansible-role-unattended-upgrades.git
 [submodule "roles/wireguard"]
 	path = roles/wireguard
 	url = git@github.com:cosandr/ansible-role-wireguard.git
