Rework Prometheus alerts
Add a lot more alert rules, use seperate files.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "**/*.yml": "ansible"
+        "**/*.yml": "ansible",
+        "files/prometheus/alerts/*.rules": "yaml"
     },
     "python.pythonPath": "/usr/bin/python3",
     "ansibleVaultInline.encryptVaultId": ""
