--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -274,171 +274,7 @@ prometheus_scrape_configs_static:
         labels:
           instance: "{{ hostvars['romgw01'].inventory_hostname }}"
 
-prometheus_alert_rules:
-  - alert: HostOutOfMemory
-    expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 10
-    for: 2m
-    labels:
-      severity: warning
-    annotations:
-      summary: '{% raw %}{{ $labels.instance }} low on memory{% endraw %}'
-      description: '{% raw %}Node memory is filling up ({{ printf "%.2f" $value }}% left){% endraw %}'
-  - alert: ContainerKilled
-    expr: time() - container_last_seen > 60
-    for: 10m
-    labels:
-      severity: warning
-    annotations:
-      summary: '{% raw %}{{ $labels.name }} container dead{% endraw %}'
-  - alert: HostSystemdServiceCrashed
-    expr: node_systemd_unit_state{state="failed", name!="dnf-makecache.service"} == 1
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: '{% raw %}{{ $labels.name }} systemd service {{ $labels.state }} on {{ $labels.instance }}{% endraw %}'
-  - alert: IpmiCpuTempHigh
-    expr: ipmi_temperature_celsius{name="CPU Temp"} > 80
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: '{% raw %}CPU Temperature high [{{ $value }}C] on {{ $labels.instance }}{% endraw %}'
-  - alert: IpmiVrmTempHigh
-    expr: ipmi_temperature_celsius{name=~"VRM.*"} > 90
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: '{% raw %}{{ $labels.name }} temperature high [{{ $value }}C] on {{ $labels.instance }}{% endraw %}'
-  - alert: IpmiDimmTempHigh
-    expr: ipmi_temperature_celsius{name=~"DIMM.*"} > 60
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: '{% raw %}{{ $labels.name }} temperature high [{{ $value }}C] on {{ $labels.instance }}{% endraw %}'
-  - alert: InstanceDown
-    expr: 'up{instance!="{{ desktop_label }}",instance!="{{ laptop_label }}",job!="mph"} == 0'
-    for: 10m
-    labels:
-      severity: critical
-    annotations:
-      summary: '{% raw %}Job {{ $labels.job }} on {{ $labels.instance }} down{% endraw %}'
-  - alert: SensorDown
-    expr: 'iot_up == 0'
-    for: 10m
-    labels:
-      severity: critical
-    annotations:
-      summary: '{% raw %}Sensor {{ $labels.instance }} in room {{ $labels.room }} down{% endraw %}'
-  - alert: BmeSensorDown
-    expr: '(time() - push_time_seconds{exported_job="bme"}) > 120'
-    for: 5m
-    labels:
-      severity: critical
-    annotations:
-      summary: '{% raw %}Sensor {{ $labels.exported_instance }} in room {{ $labels.room }} down{% endraw %}'
-  - alert: NodeFilesystemSpaceFillingUp
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available space left and is filling up.{% endraw %}'
-      summary: 'Filesystem is predicted to run out of space within the next 24 hours.'
-    expr: "(\n  node_filesystem_avail_bytes{job=\"node\",fstype!=\"\"} / node_filesystem_size_bytes{job=\"node\",fstype!=\"\"} * 100 < 40\nand\n  predict_linear(node_filesystem_avail_bytes{job=\"node\",fstype!=\"\"}[6h], 24*60*60) < 0\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: warning
-  - alert: NodeFilesystemSpaceFillingUp
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available space left and is filling up fast.{% endraw %}'
-      summary: 'Filesystem is predicted to run out of space within the next 4 hours.'
-    expr: "(\n  node_filesystem_avail_bytes{job=\"node\",fstype!=\"\"} / node_filesystem_size_bytes{job=\"node\",fstype!=\"\"} * 100 < 20\nand\n  predict_linear(node_filesystem_avail_bytes{job=\"node\",fstype!=\"\"}[6h], 4*60*60) < 0\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: critical
-  - alert: NodeFilesystemAlmostOutOfSpace
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available space left.{% endraw %}'
-      summary: 'Filesystem has less than 5% space left.'
-    expr: "(\n  node_filesystem_avail_bytes{job=\"node\",fstype!=\"\"} / node_filesystem_size_bytes{job=\"node\",fstype!=\"\"} * 100 < 5\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: warning
-  - alert: NodeFilesystemAlmostOutOfSpace
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available space left.{% endraw %}'
-      summary: 'Filesystem has less than 3% space left.'
-    expr: "(\n  node_filesystem_avail_bytes{job=\"node\",fstype!=\"\"} / node_filesystem_size_bytes{job=\"node\",fstype!=\"\"} * 100 < 3\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: critical
-  - alert: NodeFilesystemFilesFillingUp
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available inodes left and is filling up.{% endraw %}'
-      summary: 'Filesystem is predicted to run out of inodes within the next 24 hours.'
-    expr: "(\n  node_filesystem_files_free{job=\"node\",fstype!=\"\"} / node_filesystem_files{job=\"node\",fstype!=\"\"} * 100 < 40\nand\n  predict_linear(node_filesystem_files_free{job=\"node\",fstype!=\"\"}[6h], 24*60*60) < 0\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: warning
-  - alert: NodeFilesystemFilesFillingUp
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available inodes left and is filling up fast.{% endraw %}'
-      summary: 'Filesystem is predicted to run out of inodes within the next 4 hours.'
-    expr: "(\n  node_filesystem_files_free{job=\"node\",fstype!=\"\"} / node_filesystem_files{job=\"node\",fstype!=\"\"} * 100 < 20\nand\n  predict_linear(node_filesystem_files_free{job=\"node\",fstype!=\"\"}[6h], 4*60*60) < 0\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: critical
-  - alert: NodeFilesystemAlmostOutOfFiles
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available inodes left.{% endraw %}'
-      summary: 'Filesystem has less than 5% inodes left.'
-    expr: "(\n  node_filesystem_files_free{job=\"node\",fstype!=\"\"} / node_filesystem_files{job=\"node\",fstype!=\"\"} * 100 < 5\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: warning
-  - alert: NodeFilesystemAlmostOutOfFiles
-    annotations:
-      description: '{% raw %}Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf "%.2f" $value }}% available inodes left.{% endraw %}'
-      summary: 'Filesystem has less than 3% inodes left.'
-    expr: "(\n  node_filesystem_files_free{job=\"node\",fstype!=\"\"} / node_filesystem_files{job=\"node\",fstype!=\"\"} * 100 < 3\nand\n  node_filesystem_readonly{job=\"node\",fstype!=\"\"} == 0\n)\n"
-    for: 1h
-    labels:
-      severity: critical
-  - alert: NodeNetworkReceiveErrs
-    annotations:
-      description: '{% raw %}{{ $labels.instance }} interface {{ $labels.device }} has encountered {{ printf "%.0f" $value }} receive errors in the last two minutes.{% endraw %}'
-      summary: 'Network interface is reporting many receive errors.'
-    expr: "increase(node_network_receive_errs_total[2m]) > 10\n"
-    for: 1h
-    labels:
-      severity: warning
-  - alert: NodeNetworkTransmitErrs
-    annotations:
-      description: '{% raw %}{{ $labels.instance }} interface {{ $labels.device }} has encountered {{ printf "%.0f" $value }} transmit errors in the last two minutes.{% endraw %}'
-      summary: 'Network interface is reporting many transmit errors.'
-    expr: "increase(node_network_transmit_errs_total[2m]) > 10\n"
-    for: 1h
-    labels:
-      severity: warning
-  - alert: NodeHighNumberConntrackEntriesUsed
-    annotations:
-      description: '{% raw %}{{ $value | humanizePercentage }} of conntrack entries are used{% endraw %}'
-      summary: 'Number of conntrack are getting close to the limit'
-    expr: "(node_nf_conntrack_entries / node_nf_conntrack_entries_limit) > 0.75\n"
-    labels:
-      severity: warning
-  - alert: NodeClockSkewDetected
-    annotations:
-      message: '{% raw %}Clock on {{ $labels.instance }} is out of sync by more than 300s. Ensure NTP is configured correctly on this host.{% endraw %}'
-      summary: 'Clock skew detected.'
-    expr: "(\n  node_timex_offset_seconds > 0.05\nand\n  deriv(node_timex_offset_seconds[5m]) >= 0\n)\nor\n(\n  node_timex_offset_seconds < -0.05\nand\n  deriv(node_timex_offset_seconds[5m]) <= 0\n)\n"
-    for: 10m
-    labels:
-      severity: warning
-  - alert: NodeClockNotSynchronising
-    annotations:
-      message: '{% raw %}Clock on {{ $labels.instance }} is not synchronising. Ensure NTP is configured on this host.{% endraw %}'
-      summary: 'Clock not synchronising.'
-    expr: "min_over_time(node_timex_sync_status[5m]) == 0\n"
-    for: 10m
-    labels:
-      severity: warning
+prometheus_alert_rules_files:
+  - "{{ inventory_dir }}/files/prometheus/alerts/*.rules"
+
+prometheus_alert_rules: []
