Ignore macrium for gdrive backups

--- a/host_vars/dresrv/systemd/backup-gdrive.yml
+++ b/host_vars/dresrv/systemd/backup-gdrive.yml
@@ -5,6 +5,7 @@ __gdrive_exclude:
   - 'external-os/**'
   - 'vcenter/**'
   - 'truenas/**'
+  - 'macrium/**'
 
 __sd_backup_gdrive:
   name: backup-gdrive
