--- a/group_vars/prom/ipmi.yml
+++ b/group_vars/prom/ipmi.yml
@@ -3,8 +3,13 @@
 ipmi_exporter_port: 9290
 ipmi_exporter_web_listen_address: "0.0.0.0:{{ ipmi_exporter_port }}"
 ipmi_exporter_modules:
-  default:
+  slb:
     user: "exporter"
     pass: "{{ vault_ipmi_exporter_pass.slb }}"
+    driver: "LAN_2_0"
+    privilege: "admin"
+  xn01:
+    user: "exporter"
+    pass: "{{ vault_ipmi_exporter_pass.xn01 }}"
     driver: "LAN_2_0"
     privilege: "admin"
