--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "roles/blackbox_exporter"]
 	path = roles/blackbox_exporter
 	url = git@github.com:cosandr/ansible-blackbox-exporter.git
+[submodule "roles/pg_repo"]
+	path = roles/pg_repo
+	url = git@github.com:cosandr/ansible-role-pg_repo.git
