Add and configure pgbackrest

--- a/group_vars/pg/firewalld.yml
+++ b/group_vars/pg/firewalld.yml
@@ -8,6 +8,9 @@ firewalld_zones:
     sources:
       - "{{ hostvars['laptop'].wireguard_ip }}"
 
+  - name: internal
+    sources: "{{ groups['pgbackrest'] | map('extract', hostvars, 'ansible_host') }}"
+
 firewalld_services:
   - name: postgresql
     zone: internal
