--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -13,11 +13,47 @@
       maproot_user: root
       maproot_group: wheel
       enabled: true
+    pgbackrest_share:
+      paths: ["/mnt/tank/backup/pgbackrest"]
+      comment: "Pgbackrest shares"
+      hosts: "{{ groups['pgbackrest'] | map('extract', hostvars, 'ansible_host') }}"
+      alldirs: true
+      ro: false
+      quiet: false
+      maproot_user: root
+      maproot_group: wheel
+      enabled: true
   tasks:
-    - name: Configure PSQL backup share
+    - name: Configure shares
       spatiumcepa.truenas.truenas_api_sharing_nfs:
-        model: "{{ pg_share }}"
+        model: "{{ item }}"
         state: present
+      loop:
+        - "{{ pg_share }}"
+        - "{{ pgbackrest_share }}"
+
+- hosts: db
+  roles:
+    - role: setup_disks
+      tags: ["disk"]
+
+    - role: node_exporter
+      vars:
+        # Configured by firewall role
+        node_exporter_config_firewall: false
+      tags: ["node_exporter"]
+
+    - role: cosandr.dnf_automatic
+      tags: ["dnf_automatic"]
+
+    - role: firewall_config
+      tags: ["firewall"]
+
+    - role: pgbackrest
+      tags: ["pgbackrest"]
+
+    - role: auto_ssh
+      tags: ["auto-ssh"]
 
 - hosts: pg
   gather_facts: true
@@ -34,9 +70,6 @@
       tags: ["nfs"]
 
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
     - role: postgresql
       tags: ["pg"]
 
@@ -45,17 +78,16 @@
         postgres_service_name: "{{ postgresql_daemon }}"
       tags: ["prometheus-stack", "postgres_exporter"]
 
-    - role: node_exporter
-      vars:
-        # Configured by firewall role
-        node_exporter_config_firewall: false
-      tags: ["node_exporter"]
-
     - role: systemd
       tags: ["systemd"]
 
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
-    - role: firewall_config
-      tags: ["firewall"]
+- hosts: pgbackrest
+  pre_tasks:
+    - name: Mount NFS share
+      mount:
+        src: "{{ hostvars['truenas'].local_ips.vm }}:/mnt/tank/backup/pgbackrest"
+        path: "/var/lib/pgbackrest"
+        opts: "defaults,vers=4,rw,noatime,bg"
+        state: mounted
+        fstype: nfs
+      tags: ["nfs"]
